Refactor: 상품별 투자자 조회